# linux-email-server

./: .gitignore  LICENSE  README.md
client/: main.cpp
client-a/: main.cpp
client-b/: main.cpp
dao-lib/: CMakeLists.txt  lesdao.cpp  lesdao.h  test.cpp
demo/: CMakeLists.txt  main.cpp
demo/include/: leadao.h  type.h
libleadao/: CMakeLists.txt  leadao.cpp  leadao.h  type.cpp  type.h
server/: .gitignore  CMakeLists.txt  main.cpp
sql/: linux-email-app.sql
unit-test/: CMakeLists.txt  main.cpp  unit-test-result-all.html  unit-test-result-delete.html  unit-test-result-sign-up.html
unit-test/include/: type.h
unit-test/result/: all.html  email.html  sign-in.html
unit-test/test-result/: unit-test-result-connect.html  unit-test-result-contact.html  unit-test-result-draft.html  unit-test-result-recover.html
